style.css
/* ... */
  
  

/* Landscape Large */
@media (min-width: 1000px), (orientation: landscape) {
    form {
        padding: 4vw;
    }
    h1 {
        font-family: 'Fredoka One', cursive;
        font-size: 4vw;
        padding-top: 0;
    }
    h2 {
        font-family: 'Raleway', sans-serif;
        color: grey;
        font-size: 80px;
    }
    h3 {
        font-family: 'Raleway', sans-serif;
        color: grey;
        font-size: 20pt;
        margin: 0;
        padding-bottom: 2vw;
    }
    a:hover {
        text-decoration: none;
        color: rgb(238, 143, 89);
    }
    .main-content {
        width: 65%;
        padding-top: 2vw;
        margin: auto;
        justify-content: center;
    }
    .dashboard {
        display: inline-block;
        background: white;
        height: 20vw;
        width: 100%;
        margin: auto;
        border: none;
    }
    .button {
        font-family: 'Raleway', sans-serif;
        background-color: #539e66;
        color: white;
    }
    .list-header {
        text-align: center;
        padding-bottom: 2vw;
    }
    .submitHeader {
        padding: 0 0 2vw 0;
    }
    
    form {
        text-align: center;
    }
    input {
        display: inline-flex;
        width: 25vw;
        font-family: 'Raleway', sans-serif;
        font-size: 1.8vw;
        text-align: center;
        color: grey;
        background: rgb(215, 224, 216);
        padding: 10px;
        margin: auto;
        border: none;
        border-radius: 8px;
        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    }
    .form-submit button {
        color: white;
        background-color: #4f724a;
        width: 25vw;
        font-family: 'Raleway', sans-serif;
        padding: 10px;
        margin: auto;
        border: none;
        border-radius: 8px;
        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    }
    #sub-button:hover {
        background: rgb(238, 143, 89);
    }
    .submitItem {
        margin: 0;
        padding: 0 1vw 0 1vw;
        display: inline;
    }
    #notes {
        display: block;
    }
    #email {
        display: block;
    }
    .form-submit {
        margin-bottom: 0;
        padding: 2vw 0 0 0;
        display: block;
    }
    .plant-button {
        font-size: 2vw;
    }
    .plant-button:active {
        border: none;
        color: rgb(238, 143, 89);
    }
    .plant-button {
        border: none;
        display: flex;
        background: white;
    }
    #plantList {
        float: left;
    }
    
    /* Modal */
    ul {
        list-style-type: none;
        padding-left: 15%;
    }
    ul>h3 {
        text-align: center;
    }
    
    /* Plant Info Box - inside modal */
    .info-box {
        background: white;
        width: 40%;
        height: 40vw;
        margin: auto;
    }
    /* The Close Button */
    .close {
        position: absolute;
        top: 15px;
        right: 35px;
        color: #f1f1f1;
        font-size: 4vw;
        font-weight: bold;
        transition: 0.3s;
    }
}
/* ... */

